--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,34 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
-
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
 }
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: Arial, Helvetica, sans-serif;
 }
-
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+
+    }
+    .glow-border:hover {
+      box-shadow: 0 0 20px 5px rgba(45, 255, 196, 0.9);
+      border-color: rgba(45, 255, 196, 0.9); /* Adjust glow color */
+    }
 }
 section {
-  scroll-margin-top: 8px; /* Adjust this value based on your header height */
+    scroll-margin-top: 8px;
+    /* Adjust this value based on your header height */
 }
-
+.glow-1:hover {
+  box-shadow: 0 0 20px 5px rgba(45, 255, 196, 0.9);
+  border-color: rgba(45, 255, 196, 0.9); /* Change border color to glow color */
+}
 
